# tty-pet

./: AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md
docs/: AGENT_INTEGRATION.md  DESIGN.md  IMPLEMENTATION_ISSUES.md  INTERACTIONS.md
docs/adr/: 0001-structured-agent-presentation.md
plugins/claude-code/tty-pet/.claude-plugin/: plugin.json
plugins/claude-code/tty-pet/skills/tty-pet/: SKILL.md
plugins/codex/tty-pet/: .mcp.json
plugins/codex/tty-pet/.codex-plugin/: plugin.json
plugins/codex/tty-pet/skills/tty-pet/: SKILL.md
src/: agent_presentation.rs  app.rs  cli.rs  config.rs  interactions.rs  lib.rs  main.rs  mcp.rs  time.rs
src/db/: migrations.rs  mod.rs  models.rs  repository.rs
src/mood/: mod.rs  phrases.rs  rules.rs
src/pet/: custom_image.rs  mod.rs
src/project/: git.rs  identity.rs  mod.rs
src/tui/: app_state.rs  mod.rs  render.rs  sprites.rs  terminal.rs
tests/: cli.rs  plugins.rs
